@@ -106,6 +106,7 @@ Application Changes:
 - Black Market Pipeline's discount can now be applied to weapon mounts and can now be toggled freely during character creation. Fixes #4553.
 - Gear added to unequipped cyberware, armor, or weapons in some rare cases now no longer results in a bunch of cloned, phantom improvements.
 - Reapplying improvements no longer resets all of a character's Prototype Transhuman bioware.
+- Spells added by bonuses can now have their Extended, Limited, Alchemical and UsesUnarmed properties set using XML attributes in the bonus node.
 
 Data Changes:
 - Consolidated all German Data Changes custom data and all German-exclusive content of sourcebooks printed in English into a single German Data Changes c.ustom data folder.
@@ -156,6 +157,7 @@ Data Changes:
 - Fixed various incorrect page references for weapons added by Krime Katalog.
 - The custom ruleset to exclude German sourcebooks now also excludes Shadowrun 2050.
 - Fixed Stun Baton not being able to be reloaded with peak-energy discharge units.
+- Alter Ballistics is now flagged as an Alchemical spell when added via the Alchemical Armorer quality. Characters that already have this quality will need to use Reapply Improvements to see this change. 
 
 Changed/New Strings:
 - String_ContactPoints
